--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ body {
             <li class="nav-item"><a class="nav-link active" href="index.html">活動資訊</a></li>
             <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
             <li class="nav-item"><a class="nav-link" href="register.html">報名名單</a></li>
-            <li class="nav-item"><a class="nav-link" href="checkin-終版-F.html">我要打卡</a></li>
+            <li class="nav-item"><a class="nav-link" href="checkin-終版-F.html">簽到入場</a></li>
             <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
             <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
         </ul>
@@ -209,6 +209,7 @@ navLinks.forEach(link=>{ link.addEventListener('click', ()=>{ navLinks.forEach(l
 
 </body>
 </html>
+
 
 
 
