--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ body {
 /* ⭐ 紅色閃爍箭頭動畫 */
 .nav-link-arrow {
   position: relative;
-  padding-left: 22px; /* 電腦版箭頭靠近文字 */
+  padding-left: 22px; /* 箭頭靠近文字左側 */
 }
 
 .nav-link-arrow::before {
   content: "➤";
   position: absolute;
-  left: -10px; /* 電腦版微左移 */
+  left: -10px; /* 左側箭頭 */
   top: 50%;
   transform: translateY(-50%);
   color: #FF3333;
@@ -60,23 +60,24 @@ body {
   100% { opacity: 1; transform: translateY(-50%) translateX(0); }
 }
 
-/* 手機版設定 */
+/* 手機版調整 */
 @media (max-width: 992px) {
     .navbar-toggler { position: absolute; right: 15px; border: none; }
     .navbar-toggler svg { width: 40px; height: 40px; fill: #FFFFFF; stroke: #FFFFFF; stroke-width: 1; }
 
-    /* 手機版箭頭置中在文字右側 */
-    .navbar-nav { text-align: center; width: 100%; }
-    .navbar-nav .nav-item { margin: 8px 0; }
-    .nav-link-arrow {
-        padding-left: 0;
-        display: inline-block;
+    /* 手機版選單置中 */
+    .navbar-nav {
+        text-align: center;
+        width: 100%;
+        justify-content: center;
     }
-    .nav-link-arrow::before {
-        left: auto;
-        right: -22px;
-        top: 50%;
-        transform: translateY(-50%);
+    .navbar-nav .nav-item {
+        margin: 8px 0;
+        display: flex;
+        justify-content: center;
+    }
+    .nav-link-arrow {
+        display: inline-block;
     }
 }
 
