--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@ body {
 /* ⭐ 紅色閃爍箭頭動畫 */
 .nav-link-arrow {
   position: relative;
-  padding-left: 22px; /* 箭頭靠近文字左側 */
+  padding-left: 22px; /* 電腦版箭頭靠近文字 */
 }
-
 .nav-link-arrow::before {
   content: "➤";
   position: absolute;
-  left: -10px; /* 左側箭頭 */
+  left: -12px; /* 電腦版微左移 */
   top: 50%;
   transform: translateY(-50%);
   color: #FF3333;
@@ -60,7 +59,7 @@ body {
   100% { opacity: 1; transform: translateY(-50%) translateX(0); }
 }
 
-/* 手機版調整 */
+/* 手機版 */
 @media (max-width: 992px) {
     .navbar-toggler { position: absolute; right: 15px; border: none; }
     .navbar-toggler svg { width: 40px; height: 40px; fill: #FFFFFF; stroke: #FFFFFF; stroke-width: 1; }
@@ -69,15 +68,17 @@ body {
     .navbar-nav {
         text-align: center;
         width: 100%;
-        justify-content: center;
+        justify-content: center !important;
     }
     .navbar-nav .nav-item {
         margin: 8px 0;
-        display: flex;
-        justify-content: center;
     }
+    /* 手機版箭頭靠文字左側 */
     .nav-link-arrow {
-        display: inline-block;
+        padding-left: 20px; /* 緊貼文字左側 */
+    }
+    .nav-link-arrow::before {
+        left: -18px; /* 往左移一點 */
     }
 }
 
