--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@ body {
 <!-- 導覽列 -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 <div class="container">
-    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院 114年度 </a>
+    <a class="navbar-brand d-flex align-items-center" href="index.html">
+    <img src="images/chimei-logo-green.png" alt="奇美醫院" style="height:36px; margin-right:8px;">
+    佳里奇美醫院 114年度
+</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <svg xmlns="http://www.w3.org/2000/svg" fill="white" stroke="white" stroke-width="1" class="bi bi-list" viewBox="0 0 16 16">
@@ -254,3 +257,4 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
