--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body {
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
-    <img src="images/chimei-logo-green.png" alt="奇美醫院" style="height:36px; margin-right:8px;">
+    <img src="chimei-logo-green.png" alt="奇美醫院" style="height:36px; margin-right:8px;">
     佳里奇美醫院 114年度
 </a>
 
@@ -257,4 +257,5 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
