--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 
 /* 導覽列 */
 .navbar { background: linear-gradient(90deg, rgba(75,0,130,0.85), rgba(147,112,219,0.85)); backdrop-filter: blur(10px); }
-.navbar-brand { color: #FFFFFF !important; font-weight: 700; }
+.navbar-brand { color: #FFFFFF !important; font-weight: 700; display:flex; align-items:center; }
 
 /* 分頁水平間距 */
 .navbar-nav .nav-item { margin-left: 8px; margin-right: 8px; }
@@ -63,18 +63,13 @@ body {
     .navbar-toggler { position: absolute; right: 15px; border: none; }
     .navbar-toggler svg { width: 40px; height: 40px; fill: #FFFFFF; stroke: #FFFFFF; stroke-width: 1; }
 
+    /* 手機版箭頭置中、文字與其他選項對齊 */
     .navbar-nav { text-align: center; }
     .navbar-nav .nav-item { display: block; }
-
-    .nav-link-arrow {
-        padding-left: 0; /* 移除額外 padding */
-        display: inline-block;
-        position: relative;
-    }
+    .nav-link-arrow { padding-left: 0; }
     .nav-link-arrow::before {
-        left: -18px; /* 🔹箭頭緊貼「簽」字左側 */
-        top: 50%;
-        transform: translateY(-50%);
+        left: 50%;
+        transform: translateX(-42px) translateY(-50%); /* 微調箭頭靠近「簽」字旁 */
         font-size: 1.2rem;
     }
 }
@@ -113,10 +108,11 @@ body {
 <!-- 導覽列 -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-    <img src="chimei-logo-green.png" alt="奇美醫院" style="height:36px; margin-right:8px;">
-    佳里奇美醫院 114年度
-</a>
+    <!-- logo 圖片，根目錄 -->
+    <a class="navbar-brand" href="index.html">
+        <img src="chimei-logo-green.png" alt="奇美醫院" style="height:36px; margin-right:8px;">
+        佳里奇美醫院 114年度
+    </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <svg xmlns="http://www.w3.org/2000/svg" fill="white" stroke="white" stroke-width="1" class="bi bi-list" viewBox="0 0 16 16">
@@ -257,5 +253,3 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
-
-
