--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@ body { font-family:'Noto Sans TC',sans-serif; background: linear-gradient(135deg
 
 .navbar { background-color: #4B0082 !important;background: rgba(10,10,10,0.85); backdrop-filter: blur(10px); border-bottom:1px solid rgba(255,255,255,0.1); }
 .navbar-brand, .nav-link { color:#FFFFFF !important; font-weight:700; }
-.nav-link:hover, .nav-link.active { color:#87CEFA !important; }
+.nav-link:hover, .nav-link.active { color:#FFD700 !important; }
 
 h2 { color:#4B0082; font-weight:600; text-shadow:1px 1px 3px rgba(0,0,0,0.2); }
 
@@ -53,11 +53,12 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">首頁</a></li>
-        <li class="nav-item"><a class="nav-link" href="schedule.html">活動流程</a></li>
-        <li class="nav-item"><a class="nav-link" href="teachers.html">教師芳名錄</a></li>
-        <li class="nav-item"><a class="nav-link active" href="checkin.html">報名者名單</a></li>
-        <li class="nav-item"><a class="nav-link" href="survey.html">滿意度調查</a></li>
+         <li class="nav-item"><a class="nav-link active" href="index.html">回首頁</a></li>
+            <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
+            <li class="nav-item"><a class="nav-link" href="register.html">報名名單</a></li>
+            <li class="nav-item"><a class="nav-link nav-link-arrow" href="checkin-終版-F.html">簽到入場</a></li>
+            <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
       </ul>
     </div>
   </div>
@@ -179,3 +180,4 @@ fetchCheckinData();
 </script>
 </body>
 </html>
+
