--- a/register.html
+++ b/register.html
@@ -47,7 +47,10 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="index.html">佳里奇美醫院114年度餐敘</a>
+    <a class="navbar-brand" href="index.html">
+       <img src="chimei-logo-green.png" alt="奇美醫院" style="height:36px; margin-right:8px;">
+      佳里奇美醫院114年度餐敘
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -180,4 +183,5 @@ fetchCheckinData();
 </script>
 </body>
 </html>
+
 
